--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 markdown: GFM
-title: Random bullshit to trigger the page builder.
+title: Vypracovanie maturitných otázok pre SPŠIT 2022
